# jupyterlab_email

./: .bumpversion.cfg  .gitattributes  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  azure-pipelines.yml  jest.config.js  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
docs/: Makefile  api.md  conf.py  index.rst  make.bat
js/: jest.config.js  package.json
js/src/: index.js  index.ts
js/style/: index.css
jupyter-config/jupyter_notebook_config.d/: jupyterlab_email.json
jupyterlab_email/: __init__.py  _email.py  _version.py  attachments.py  email.py  extension.py  handlers.py  nbconvert.py  postprocessors.py
jupyterlab_email/extension/: install.json  jupyterlab_email.json
jupyterlab_email/templates/: error.tpl  hide_code_cells_html.tpl  hide_code_cells_html_email.tpl  hide_code_cells_pdf.tplx  html.tpl  html_email.tpl  pdf_license
jupyterlab_email/tests/: test_all.py  test_extension.py  test_init.py
src/: index.ts
style/: index.css
tests/: test_extension.py
