[bumpversion]
current_version = 0.2.4
commit = True
tag = False

[bdist_wheel]
universal = 1

[metadata]
description_file = README.md
long_description_content_type=text/markdown

[flake8]
ignore=E203, W503
max-line-length=200
exclude=jupyterlab_email/tests
per-file-ignores=
    jupyterlab_email/__init__.py:F401, F403

[tool:pytest]
junit_family = xunit2

[bumpversion:file:jupyterlab_email/_version.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:js/package.json]
search = "version": "{current_version}"
replace = "version": "{new_version}"

[bumpversion:file:docs/conf.py]
search = version = "{current_version}"
replace = version = "{new_version}"

[check-manifest]
ignore = 
	jupyterlab_email/labextension/**
	js/**
